basic react + webpack setup

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "start:dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate:latest": "knex --knexfile ./database/knexfile.js migrate:latest",
     "migrate:make": "knex --knexfile ./database/knexfile.js migrate:make",
-    "migrate:rollback": "knex --knexfile ./database/knexfile.js migrate:rollback"
+    "migrate:rollback": "knex --knexfile ./database/knexfile.js migrate:rollback",
+    "start:dev": "webpack-dev-server --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,17 @@
     "express": "^4.15.3",
     "knex": "^0.13.0",
     "pg": "^6.2.3",
-    "pg-promise": "^5.8.2"
+    "pg-promise": "^5.8.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
     "nodemon": "^1.11.0"
   }
 }
