--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:latest": "knex --knexfile ./database/knexfile.js migrate:latest",
+    "migrate:make": "knex --knexfile ./database/knexfile.js migrate:make",
+    "migrate:rollback": "knex --knexfile ./database/knexfile.js migrate:rollback"
   },
   "repository": {
     "type": "git",
@@ -19,7 +22,10 @@
   },
   "homepage": "https://github.com/EthanJStark/cms-demo#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "knex": "^0.13.0",
+    "pg": "^6.2.3",
+    "pg-promise": "^5.8.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
