--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.15.3",
     "knex": "^0.13.0",
     "pg": "^6.2.3",
-    "pg-promise": "^5.8.2"
+    "pg-promise": "^5.8.2",
+    "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
